<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/image_background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:background="@drawable/circle_shape"
        android:src="@drawable/image_icon"
        android:contentDescription="@string/todo"/>

    <Button
        android:id="@+id/btnStart"
        android:layout_marginTop="50dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/batdau">

    </Button>

    <Button
        android:id="@+id/btnInstruct"
        android:layout_marginTop="30dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/instruct">
    </Button>

    <Button
        android:id="@+id/btnSetting"
        android:layout_marginTop="30dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/caidat">
    </Button>

    <Button
        android:id="@+id/btnEnd"
        android:layout_marginTop="30dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/thoat">

    </Button>

</LinearLayout>